@@ -48,6 +48,7 @@
 		int  Peek(int iBuffer, int x, int y);
 		void Rectangle(int iBuffer, int x1, int y1, int x2, int y2, int color);
 		void CopyFromToBuffer(int iBufferFrom, int iBufferTo);
+		void Clear(int iBuffer);
 				
 	public:
 		u32 *m_Buffer[4]; // 4 FRAMES in VRAM
